# ThermaCore

./: CMakeLists.txt  Containerfile  Containerfile.dev  README.md
Daemon/: README.md
Debugger/: README.md
GUI/: README.md
Global/include/: EmbeddedController.hpp  HwmonSensor.hpp  MachineProfile.hpp
Global/src/: EmbeddedController.cpp  HwmonSensor.cpp  MachineProfile.cpp
TUI/: CMakeLists.txt
TUI/include/: FanController.hpp
TUI/src/: FanController.cpp  main.cpp
src/: orion_tui.cpp
src/debugger/: fanctl_embedded.cpp
